--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <a href="">tesing</a>
                 </li>
                 <li>
+                    <a href="">tesing</a>
+                </li>
+                <li>
                     <a href="technology.html">បច្ចេកវិទ្យា</a>
                 </li>
             </ul>
