--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li>
                     <a href="technology.html">បច្ចេកវិទ្យា</a>
                 </li>
+                <li><a href="education.html">អប់រំ</a></li>
             </ul>
         </div>
     </section>
